--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "author": "Evgeniy Khramkov <ewgeniux@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@angular/compiler": "^2.4.4",
     "tslint": "^4.3.1",
-    "typescript": "^2.1.5"
+    "typescript": "^2.1.5",
+    "webpack": "next",
+    "webpack-dev-server": "next"
+  },
+  "dependencies": {
+    "@angular/core": "^2.4.4",
+    "rxjs": "^5.0.3",
+    "zone.js": "^0.7.6"
   }
 }
